tests/paczka2/big_fuzzy/68443802.err
Error in line 2: tFyZwISbxho A583 23,4
Error in line 8: A583 A768 86,0
Error in line 24: tFyZwISbxho S770 73,0
Error in line 30: LP1oOcWNw A583 -2,6
Error in line 26: LP1oOcWNw A583 70,2
Error in line 50: Jxo1S A583 60,55
Error in line 51: FmZ9zUzxhT A725 98,0
Error in line 52: FmZ9zUzxhT A583 86,9
Error in line 59: A583 S770 100,0
Error in line 60: A583 A768 77,2
Error in line 56: baWnnhqsu A768 62,6
Error in line 54: 04VVReSM A768 99,7
Error in line 45: Jxo1S A583 12,9
Error in line 78: A583 A768 8,1
Error in line 81: A583 A583 70,6
Error in line 89: A583 A725 99,8
Error in line 90: Jxo1S S770 382,1
Error in line 70: FmZ9zUzxhT S770 79,3
Error in line 108: FmZ9zUzxhT A725 25,9
Error in line 114: 04VVReSM A583 61,8
Error in line 115: 04VVReSM S770 96,4
Error in line 111: A583 A768 32,6
Error in line 135: tFyZwISbxho A768 15,35
Error in line 134: tFyZwISbxho S770 91,0
Error in line 145: Jxo1S A725 43,8
Error in line 148: baWnnhqsu S770 57,6
Error in line 162: FmZ9zUzxhT A725 74,4
Error in line 169: 04VVReSM A583 5,1
Error in line 172: 04VVReSM S770 4,6
Error in line 174: Jxo1S S770 4,5
Error in line 180: LP1oOcWNw A725 16,7
Error in line 185: tFyZwISbxho A583 37,2
Error in line 190: baWnnhqsu A583 47,3
Error in line 199: baWnnhqsu A725 73,1
Error in line 200: tFyZwISbxho A583 78,6
Error in line 204: baWnnhqsu A583 10,9
Error in line 205: tFyZwISbxho A768 24,0
Error in line 209: A583 A583 98,0
Error in line 213: Jxo1S A768 33,06
Error in line 212: A583 S770 94,1
Error in line 217: baWnnhqsu S770 266,8
Error in line 223: tFyZwISbxho A725 22,5
Error in line 220: Jxo1S S770 94,8
Error in line 228: tFyZwISbxho A583 67,23
Error in line 226: tFyZwISbxho A583 37,6
Error in line 219: 04VVReSM A583 22,7
Error in line 243: baWnnhqsu S770 20,5
